--- a/.github/workflows/update-db.yml
+++ b/.github/workflows/update-db.yml
@@ -7,6 +7,10 @@ on:
     paths:
       - manifests/**
 
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: false  
+
 jobs:
   build:
     runs-on: ubuntu-latest
