--- a/.github/workflows/update-db.yml
+++ b/.github/workflows/update-db.yml
@@ -16,9 +16,9 @@ jobs:
       - uses: actions/checkout@v4
       - run: Install-Module -Name powershell-yaml -Force -Repository PSGallery -Scope CurrentUser
         shell: pwsh
-      - run: .\build_database.ps1
+      - run: .\Tools\build_database.ps1
         shell: pwsh
       - run: pip install -r requirements.txt
-      - run: python write_database.py
+      - run: python Tools/write_database.py
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
