--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
     "@vercel/node": "^3.0.17",
-    "@vercel/postgres-kysely": "^0.7.2",
-    "kysely": "^0.27.2"
+    "kysely": "^0.27.2",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "vercel": "^33.3.0"
