--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "dependencies": {
+    "@neondatabase/serverless": "^0.7.2",
     "@vercel/node": "^3.0.17",
-    "kysely": "^0.27.2",
-    "pg": "^8.11.3"
-  },
-  "devDependencies": {
-    "vercel": "^33.3.0"
+    "kysely": "^0.27.2"
   }
 }
