--- a/.github/.kodiak.toml
+++ b/.github/.kodiak.toml
@@ -13,7 +13,7 @@ version = 1
 
 # By default, Kodiak will only act on PRs that have this label. You can disable
 # this requirement via `merge.require_automerge_label`.
-automerge_label = ["scan/passed"] # default: "automerge"
+automerge_label = ["scan/passed", "dependencies"] # default: "automerge"
 
 # Require that the automerge label (`merge.automerge_label`) be set for Kodiak
 # to merge a PR.
@@ -69,9 +69,6 @@ include_pull_request_url = true # default: false
 # through the UI. This option only applies when `merge.message.title` does not
 # equal `"github_default"`.
 include_pr_number = true # default: true
-
-[merge.automerge_dependencies]
-usernames = ["dependabot"]
 
 [approve]
 
