--- a/manifests/m/Microsoft/AzureDataStudio/1.47.1/Microsoft.AzureDataStudio.installer.yaml
+++ b/manifests/m/Microsoft/AzureDataStudio/1.47.1/Microsoft.AzureDataStudio.installer.yaml
@@ -1,4 +1,4 @@
-# Created with YamlCreate.ps1 v2.2.13 $debug=NVS1.CRLF.5-1-22621-2506.Win32NT
+# Created using wingetcreate 1.5.7.0
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.5.0.schema.json
 
 PackageIdentifier: Microsoft.AzureDataStudio
@@ -13,7 +13,6 @@ InstallerSwitches:
 UpgradeBehavior: install
 Commands:
 - azuredatastudio
-ReleaseDate: 2024-01-10
 Installers:
 - Architecture: x64
   Scope: user
@@ -25,4 +24,3 @@ Installers:
   InstallerSha256: 9C59B9D407B2F420299E657D4BBA03879AB0B5C764DE175471B74F20FA8A4B1B
 ManifestType: installer
 ManifestVersion: 1.5.0
-
