--- a/manifests/m/Microsoft/AzureDataStudio/1.47.1/Microsoft.AzureDataStudio.locale.en-US.yaml
+++ b/manifests/m/Microsoft/AzureDataStudio/1.47.1/Microsoft.AzureDataStudio.locale.en-US.yaml
@@ -1,4 +1,4 @@
-# Created with YamlCreate.ps1 v2.2.13 $debug=NVS1.CRLF.5-1-22621-2506.Win32NT
+# Created using wingetcreate 1.5.7.0
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.5.0.schema.json
 
 PackageIdentifier: Microsoft.AzureDataStudio
@@ -16,7 +16,6 @@ LicenseUrl: https://github.com/microsoft/azuredatastudio/blob/main/LICENSE.txt
 Copyright: Copyright (c) Microsoft Corporation. All rights reserved.
 CopyrightUrl: https://github.com/microsoft/azuredatastudio/blob/main/LICENSE.txt
 ShortDescription: Azure Data Studio is a data management tool that enables you to work with SQL Server, Azure SQL DB and SQL DW from Windows, macOS and Linux.
-# Description: 
 Moniker: azuredatastudio
 Tags:
 - azure
@@ -24,11 +23,5 @@ Tags:
 - mysql
 - postgres
 - sql
-# ReleaseNotes: 
-ReleaseNotesUrl: https://github.com/microsoft/azuredatastudio/releases/tag/1.47.1
-# PurchaseUrl: 
-# InstallationNotes: 
-# Documentations: 
 ManifestType: defaultLocale
 ManifestVersion: 1.5.0
-
