--- a/manifests/m/Microsoft/AzureDataStudio/1.47.1/Microsoft.AzureDataStudio.yaml
+++ b/manifests/m/Microsoft/AzureDataStudio/1.47.1/Microsoft.AzureDataStudio.yaml
@@ -1,4 +1,4 @@
-# Created with YamlCreate.ps1 v2.2.13 $debug=NVS1.CRLF.5-1-22621-2506.Win32NT
+# Created using wingetcreate 1.5.7.0
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.5.0.schema.json
 
 PackageIdentifier: Microsoft.AzureDataStudio
@@ -6,4 +6,3 @@ PackageVersion: 1.47.1
 DefaultLocale: en-US
 ManifestType: version
 ManifestVersion: 1.5.0
-
