--- a/manifests/g/Google/GoogleDrive/85.0.37.0/Google.GoogleDrive.installer.yaml
+++ b/manifests/g/Google/GoogleDrive/85.0.37.0/Google.GoogleDrive.installer.yaml
@@ -1,4 +1,4 @@
-# Created with YamlCreate.ps1 v2.2.12 by Dumplings $debug=QUSU.CRLF.7-2-18.Win32NT
+# Created using wingetcreate 1.5.7.0
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.5.0.schema.json
 
 PackageIdentifier: Google.GoogleDrive
@@ -18,11 +18,10 @@ ExpectedReturnCodes:
 - InstallerReturnCode: 1638
   ReturnResponse: alreadyInstalled
 UpgradeBehavior: install
+ProductCode: '{6BBAE539-2232-434A-A4E5-9A33560C6283}'
 Installers:
 - Architecture: x64
-  InstallerUrl: https://dl.google.com/release2/drive-file-stream/owj3bgilke5kw7xfeyfcz5tazu_85.0.37.0/setup.exe
+  InstallerUrl: https://dl.google.com/drive-file-stream/GoogleDriveSetup.exe
   InstallerSha256: 80504351AB04FF76DE44FA19E32302FAAD704E151E711557BE409CBDC9A7DEB2
-  ProductCode: '{6BBAE539-2232-434A-A4E5-9A33560C6283}'
 ManifestType: installer
 ManifestVersion: 1.5.0
-
