--- a/.github/.kodiak.toml
+++ b/.github/.kodiak.toml
@@ -65,3 +65,7 @@ include_pr_number = true # default: true
 # If a PR is opened by a user with a username in the `approve.auto_approve_usernames` list,
 # Kodiak will automatically add an approval to the PR.
 auto_approve_usernames = ["dependabot"] # default: []
+
+# If a PR has a label assigned which is in the `approve.auto_approve_labels` list,
+# Kodiak will automatically add an approval to the PR.
+auto_approve_labels = ["scan/passed"] # default: []
