--- a/manifests/z/Zoom/Zoom/5.17.5.31030/Zoom.Zoom.installer.yaml
+++ b/manifests/z/Zoom/Zoom/5.17.5.31030/Zoom.Zoom.installer.yaml
@@ -1,4 +1,4 @@
-# Created with YamlCreate.ps1 v2.2.12 by Dumplings $debug=QUSU.CRLF.7-4-1.Win32NT
+# Created using wingetcreate 1.5.7.0
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.5.0.schema.json
 
 PackageIdentifier: Zoom.Zoom
@@ -67,6 +67,7 @@ Installers:
   ProductCode: '{EC7587BB-30F4-4997-A278-4BAA1A33EC27}'
   AppsAndFeaturesEntries:
   - DisplayName: Zoom (32-bit)
+    DisplayVersion: 5.17.5 (31030)
     ProductCode: '{EC7587BB-30F4-4997-A278-4BAA1A33EC27}'
     UpgradeCode: '{C819B794-A45C-4F27-9860-0C86492A52CC}'
 - Architecture: x64
@@ -77,6 +78,7 @@ Installers:
   ProductCode: '{91FD060F-B754-4A33-8DAA-093B9F095638}'
   AppsAndFeaturesEntries:
   - DisplayName: Zoom (64-bit)
+    DisplayVersion: 5.17.5 (31030)
     ProductCode: '{91FD060F-B754-4A33-8DAA-093B9F095638}'
     UpgradeCode: '{C819B794-A45C-4F27-9860-0C86492A52CC}'
 - Architecture: arm64
@@ -91,4 +93,3 @@ Installers:
     UpgradeCode: '{C819B794-A45C-4F27-9860-0C86492A52CC}'
 ManifestType: installer
 ManifestVersion: 1.5.0
-
