--- a/manifests/b/Brave/Brave/121.1.62.153/Brave.Brave.locale.en-US.yaml
+++ b/manifests/b/Brave/Brave/121.1.62.153/Brave.Brave.locale.en-US.yaml
@@ -1,4 +1,4 @@
-# Created with YamlCreate.ps1 v2.2.12 by Dumplings $debug=QUSU.CRLF.7-2-18.Win32NT
+# Created using wingetcreate 1.5.7.0
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.5.0.schema.json
 
 PackageIdentifier: Brave.Brave
@@ -19,7 +19,6 @@ ShortDescription: Secure, Fast & Private Web Browser with Adblocker
 Description: |-
   The new Brave browser blocks ads and trackers that slow you down and invade your privacy.
   Discover a new way of thinking about how the web can work.
-# Moniker:
 Tags:
 - browser
 - chromium
@@ -93,11 +92,8 @@ ReleaseNotes: |-
   - Fixed difficulty closing sidebar when it is opened temporarily. (#34085)
   - Upgraded Chromium to 121.0.6167.85. (#35493)
 ReleaseNotesUrl: https://brave.com/latest
-# PurchaseUrl:
-# InstallationNotes:
 Documentations:
 - DocumentLabel: FAQ
   DocumentUrl: https://brave.com/faq
 ManifestType: defaultLocale
 ManifestVersion: 1.5.0
-
