--- a/manifests/m/Microsoft/DotNet/Runtime/6_Pckgr/6.0.26/Microsoft.DotNet.Runtime.6_Pckgr.installer.yaml
+++ b/manifests/m/Microsoft/DotNet/Runtime/6_Pckgr/6.0.26/Microsoft.DotNet.Runtime.6_Pckgr.installer.yaml
@@ -1,9 +1,10 @@
-# Created using wingetcreate 1.0.4.0
+# Created using wingetcreate 1.5.7.0
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.1.0.schema.json
 
 PackageIdentifier: Microsoft.DotNet.Runtime.6_Pckgr
 PackageVersion: 6.0.26
 MinimumOSVersion: 6.1.7601
+Scope: machine
 InstallerSwitches:
   Silent: /quiet
   SilentWithProgress: /passive
