--- a/manifests/m/Microsoft/Azure/StorageExplorer_Pckgr/1.32.0/Microsoft.Azure.StorageExplorer_Pckgr.installer.yaml
+++ b/manifests/m/Microsoft/Azure/StorageExplorer_Pckgr/1.32.0/Microsoft.Azure.StorageExplorer_Pckgr.installer.yaml
@@ -1,11 +1,10 @@
-# Created with WinGet Automation using Komac v1.11.0
+# Created using wingetcreate 1.5.7.0
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.5.0.schema.json
 
 PackageIdentifier: Microsoft.Azure.StorageExplorer_Pckgr
 PackageVersion: 1.32.0
 InstallerType: inno
 UpgradeBehavior: install
-ReleaseDate: 2023-11-01
 Installers:
 - Architecture: x64
   Scope: user
