--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -23,7 +23,7 @@ jobs:
           python-version: 3.x
           check-latest: true
       - run: python -m pip install -r requirements.txt
-      - run: gh repo sync PckgrTom/$env:REPO --source PckgrBot/$env:SOURCE -b master --force
+      - run: gh repo sync PckgrTom/$env:REPO --source PckgrBot/$env:REPO -b master --force
         env:
           REPO: winget-pkgs-private
       - run: python main.py
