--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -23,9 +23,8 @@ jobs:
           python-version: 3.x
           check-latest: true
       - run: python -m pip install -r requirements.txt
-      - run: gh repo sync PckgrTom/$env:REPO --source PckgrBot/$env:REPO -b master --force
+      - run: gh repo sync PckgrTom/winget-pkgs-private --source PckgrBot/winget-pkgs-private -b master --force
         env:
-          REPO: winget-pkgs-private
           GH_TOKEN: ${{ secrets.WC_TOKEN }}
       - run: python main.py
         env:
